--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-05/ts01-05.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-05/ts01-05.component.html
@@ -1,155 +1,155 @@
-<div class="ui top centered attached header segment"
-      style="background: #1e83db;color: white">
-  <span>หนังสือเรียกตามพระราชบัญญัติสรรพสามิต พ.ศ. ๒๕๖๐</span>
-</div>
+<form (submit)="onSubmit($event)" ngNativeValidate>
+  <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+    <span>หนังสือเรียกตามพระราชบัญญัติสรรพสามิต พ.ศ. ๒๕๖๐</span>
+  </div>
 
-<div class="ui attached segment">
+  <div class="ui attached segment">
     <div class="ui grid">
       <div class="ui two wide column">&nbsp;</div>
       <div class="ui twelve wide column">
-          <div class="ui form">
+        <div class="ui form">
 
-            <div class="inline fields">
-              <div class="eight wide field">
-                  &nbsp;
-              </div>
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 20% !important;">วันที่</label>
-                <div class="ui calendar" style="width:100%" id="begin_date">
-                  <div class="ui input left icon">
-                    <i class="calendar icon"></i>
-                    <input type="text" style="width:100%" placeholder="วัน/เดือน/ปี">
-                  </div>
+          <div class="inline fields">
+            <div class="eight wide field">
+              &nbsp;
+            </div>
+            <div class="eight wide field">
+              <label class="custom-label-w-18" style="width: 20% !important;">วันที่</label>
+              <div class="ui calendar" style="width:100%" id="begin_date">
+                <div class="ui input left icon">
+                  <i class="calendar icon"></i>
+                  <input type="text" style="width:100%" name="date" [(ngModel)]="obj.date" placeholder="วัน/เดือน/ปี" required>
                 </div>
               </div>
             </div>
-
-            <div class="inline fields">
-              <div class="eight wide field">
-                <div class="sixteen wide fields">
-                  <div class="four wide field">
-                    <label class="custom-label-w-18" style="width: 20% !important;">ที่</label>
-                  </div>
-                  <div class="five wide field">
-                    <input type="text">
-                  </div>
-                  <div class="two wide field">
-                    <p style="text-align: center; width: 100%"> / </p>
-                  </div>
-                  <div class="five wide field">
-                    <input type="text">
-                  </div>
-                </div>
-              </div>
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 20% !important;">สำนัก</label>
-                <input type="text" style="width: 100%">
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 20% !important;">เรื่อง</label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 20% !important;">เรียน</label>
-                <input type="text" style="width: 100%">
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="eight wide field">
-                  <div class="sixteen wide fields">
-                    <div class="eight wide field">
-                      <label class="custom-label-w-18"  style="width: 100% !important;">อ้างถึงหนังสือเรียก</label>
-                    </div>
-                    <div class="eight wide field">
-                      ......................../............................
-                    </div>
-                  </div>
-              </div>
-              <div class="eight wide field">
-                <label class="custom-label-w-18" style="width: 20% !important;">ลงวันที่</label>
-                <div class="ui calendar" style="width:100%" id="end_date">
-                  <div class="ui input left icon">
-                    <i class="calendar icon"></i>
-                    <input type="text" style="width:100%" placeholder="วัน/เดือน/ปี">
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="sixteen wide field">
-                <label class="custom-label-w-20">สิ่งที่ส่งมาด้วย</label>
-              </div>
-            </div>
-
-            <div class="inline fields" *ngFor="let num of numbers; let i = index" [attr.data-index]="i">
-              <div class="sixteen wide field">
-                <label class="custom-label-w-18">
-                  &nbsp;&nbsp;&nbsp;{{i+1}}.
-                </label>
-                <input type="text">
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="ten wide field">
-                <label class="custom-label-w-20" style="width: 110% !important;">มิได้มาพบตามนัดหมาย ในวันที่</label>
-                <div class="ui calendar" style="width:100%" id="nut_date">
-                  <div class="ui input left icon">
-                    <i class="calendar icon"></i>
-                    <input type="text" style="width:100%" placeholder="วัน/เดือน/ปี">
-                  </div>
-                </div>
-              </div>
-              <div class="six wide field">
-                <label class="custom-label-w-18">เวลา</label>
-                <input type="text">
-                <label class="custom-label-w-18">&nbsp;&nbsp;น.</label>
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="ten wide field">
-                <label class="custom-label-w-20" style="width: 110% !important;">นัดหมายใหม่อีกครั้งวันที่</label>
-                <div class="ui calendar" style="width:100%" id="nut1_date">
-                  <div class="ui input left icon">
-                    <i class="calendar icon"></i>
-                    <input type="text" style="width:100%" placeholder="วัน/เดือน/ปี">
-                  </div>
-                </div>
-              </div>
-              <div class="six wide field">
-                <label class="custom-label-w-18">เวลา</label>
-                <input type="text">
-                <label class="custom-label-w-18">&nbsp;&nbsp;น.</label>
-              </div>
-            </div>
-
-            <div class="inline fields">
-              <div class="eight wide field">
-                <label class="custom-label-w-18">ผู้ตรวจสอบ</label>
-                <input type="text" style="width: 100%">
-              </div>
-              <div class="eight wide field">
-                <label class="custom-label-w-18">ตำแหน่ง</label>
-                <input type="text" style="width: 100%">
-              </div>
-            </div>
-
           </div>
+
+          <div class="inline fields">
+            <div class="eight wide field">
+              <div class="sixteen wide fields">
+                <div class="four wide field">
+                  <label class="custom-label-w-18" style="width: 20% !important;">ที่</label>
+                </div>
+                <div class="five wide field">
+                  <input type="text" name="at1" [(ngModel)]="obj.at1">
+                </div>
+                <div class="two wide field">
+                  <p style="text-align: center; width: 100%"> / </p>
+                </div>
+                <div class="five wide field">
+                  <input type="text" name="at2" [(ngModel)]="obj.at2">
+                </div>
+              </div>
+            </div>
+            <div class="eight wide field">
+              <label class="custom-label-w-18" style="width: 20% !important;">สำนัก</label>
+              <input type="text" name="office" [(ngModel)]="obj.office" style="width: 100%">
+            </div>
+          </div>
+
+          <div class="inline fields">
+            <div class="eight wide field">
+              <label class="custom-label-w-18" style="width: 20% !important;">เรื่อง</label>
+              <input type="text" name="topic" [(ngModel)]="obj.topic" style="width: 100%">
+            </div>
+            <div class="eight wide field">
+              <label class="custom-label-w-18" style="width: 20% !important;">เรียน</label>
+              <input type="text" name="sendTo" [(ngModel)]="obj.sendTo" style="width: 100%">
+            </div>
+          </div>
+
+          <div class="inline fields">
+            <div class="eight wide field">
+              <div class="sixteen wide fields">
+                <div class="eight wide field">
+                  <label class="custom-label-w-18" style="width: 100% !important;">อ้างถึงหนังสือเรียก</label>
+                </div>
+                <div class="eight wide field">
+                  ......................../............................
+                </div>
+              </div>
+            </div>
+            <div class="eight wide field">
+              <label class="custom-label-w-18" style="width: 20% !important;">ลงวันที่</label>
+              <div class="ui calendar" style="width:100%" id="end_date">
+                <div class="ui input left icon">
+                  <i class="calendar icon"></i>
+                  <input type="text" name="date1" [(ngModel)]="obj.date1" style="width:100%" placeholder="วัน/เดือน/ปี">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="inline fields">
+            <div class="sixteen wide field">
+              <label class="custom-label-w-20">สิ่งที่ส่งมาด้วย</label>
+            </div>
+          </div>
+
+          <div class="inline fields" *ngFor="let num of numbers; let i = index" [attr.data-index]="i">
+            <div class="sixteen wide field">
+              <label class="custom-label-w-18">
+                &nbsp;&nbsp;&nbsp;{{i+1}}.
+              </label>
+              <input type="text">
+            </div>
+          </div>
+
+          <div class="inline fields">
+            <div class="ten wide field">
+              <label class="custom-label-w-20" style="width: 110% !important;">มิได้มาพบตามนัดหมาย ในวันที่</label>
+              <div class="ui calendar" style="width:100%" id="nut_date">
+                <div class="ui input left icon">
+                  <i class="calendar icon"></i>
+                  <input type="text" name="date2" [(ngModel)]="obj.date2" style="width:100%" placeholder="วัน/เดือน/ปี">
+                </div>
+              </div>
+            </div>
+            <div class="six wide field">
+              <label class="custom-label-w-18">เวลา</label>
+              <input type="text">
+              <label class="custom-label-w-18">&nbsp;&nbsp;น.</label>
+            </div>
+          </div>
+
+          <div class="inline fields">
+            <div class="ten wide field">
+              <label class="custom-label-w-20" style="width: 110% !important;">นัดหมายใหม่อีกครั้งวันที่</label>
+              <div class="ui calendar" style="width:100%" id="nut1_date">
+                <div class="ui input left icon">
+                  <i class="calendar icon"></i>
+                  <input type="text" style="width:100%" placeholder="วัน/เดือน/ปี">
+                </div>
+              </div>
+            </div>
+            <div class="six wide field">
+              <label class="custom-label-w-18">เวลา</label>
+              <input type="text">
+              <label class="custom-label-w-18">&nbsp;&nbsp;น.</label>
+            </div>
+          </div>
+
+          <div class="inline fields">
+            <div class="eight wide field">
+              <label class="custom-label-w-18">ผู้ตรวจสอบ</label>
+              <input type="text" style="width: 100%">
+            </div>
+            <div class="eight wide field">
+              <label class="custom-label-w-18">ตำแหน่ง</label>
+              <input type="text" style="width: 100%">
+            </div>
+          </div>
+
+        </div>
       </div>
       <div class="ui two wide column">&nbsp;</div>
     </div>
-</div>
+  </div>
 
-<div class="ui bottom centered attached segment">
-  <div class="ui center aligned grid">
+  <div class="ui bottom centered attached segment">
+    <div class="ui center aligned grid">
       <div class="eight wide column">
-        <button class="ui mini green button" type="button">
+        <button class="ui mini green button" type="submit">
           <i class="save icon"></i>
           พิมพ์เอกสาร
         </button>
@@ -157,6 +157,7 @@
           <i class="times icon"></i>
           ยกเลิก
         </button>
+      </div>
     </div>
   </div>
-</div>
+</form>
