--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-08/ts01-08.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-08/ts01-08.component.html
@@ -24,64 +24,64 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let ob of obj; let i = index">
+                        <tr *ngFor="let bean of beans; let i = index">
                             <td>
                                 <div class="ui transparent input">
-                                    <input type="text" name="numId{{i}}" id="numId{{i}}" [(ngModel)]="obj[i].numId" required>
+                                    <input type="text" name="numId{{i}}" id="numId{{i}}" [(ngModel)]="beans[i].numId" required>
                                 </div>
                             </td>
                             <td>
                                 <div class="ui transparent input">
-                                    <input type="text" name="chkDate{{i}}" id="chkDate{{i}}" [(ngModel)]="obj[i].chkDate" required>
+                                    <input type="text" name="chkDate{{i}}" id="chkDate{{i}}" [(ngModel)]="beans[i].chkDate" required>
                                 </div>
                             </td>
                             <td>
                                 <div class="ui transparent input">
-                                    <input type="text" name="checkName{{i}}" id="checkName{{i}}" [(ngModel)]="obj[i].checkName" required>
+                                    <input type="text" name="checkName{{i}}" id="checkName{{i}}" [(ngModel)]="beans[i].checkName" required>
                                 </div>
                             </td>
                             <td>
                                 <div class="ui transparent input">
-                                    <input type="text" name="position{{i}}" id="position{{i}}" [(ngModel)]="obj[i].position" required>
+                                    <input type="text" name="position{{i}}" id="position{{i}}" [(ngModel)]="beans[i].position" required>
                                 </div>
                             </td>
                             <td>
                                 <div class="ui transparent input">
-                                    <input type="text" name="chkOutDate{{i}}" id="chkOutDate{{i}}" [(ngModel)]="obj[i].chkOutDate" required>
+                                    <input type="text" name="chkOutDate{{i}}" id="chkOutDate{{i}}" [(ngModel)]="beans[i].chkOutDate" required>
                                 </div>
                             </td>
                             <td>
                                 <div class="ui transparent input">
-                                    <input type="text" name="chkWhere{{i}}" id="chkWhere{{i}}" [(ngModel)]="obj[i].chkWhere" required>
+                                    <input type="text" name="chkWhere{{i}}" id="chkWhere{{i}}" [(ngModel)]="beans[i].chkWhere" required>
                                 </div>
                             </td>
                             <td>
                                 <div class="ui transparent input">
-                                    <input type="text" name="chkWhat{{i}}" id="chkWhat{{i}}" [(ngModel)]="obj[i].chkWhat" required>
+                                    <input type="text" name="chkWhat{{i}}" id="chkWhat{{i}}" [(ngModel)]="beans[i].chkWhat" required>
                                 </div>
                             </td>
                             <td>
                                 <div class="ui transparent input">
-                                    <input type="text" name="whoToSign{{i}}" id="whoToSign{{i}}" [(ngModel)]="obj[i].whoToSign" required>
+                                    <input type="text" name="whoToSign{{i}}" id="whoToSign{{i}}" [(ngModel)]="beans[i].whoToSign" required>
                                 </div>
                             </td>
                             <td>
                                 <div class="ui transparent input">
-                                    <input type="text" name="checkerOk{{i}}" id="checkerOk{{i}}" [(ngModel)]="obj[i].checkerOk" required>
+                                    <input type="text" name="checkerOk{{i}}" id="checkerOk{{i}}" [(ngModel)]="beans[i].checkerOk" required>
                                 </div>
                             </td>
                             <td>
                                 <div class="ui transparent input">
-                                    <input type="text" name="dateToSend{{i}}" id="dateToSend{{i}}" [(ngModel)]="obj[i].dateToSend" required>
+                                    <input type="text" name="dateToSend{{i}}" id="dateToSend{{i}}" [(ngModel)]="beans[i].dateToSend" required>
                                 </div>
                             </td>
                             <td>
                                 <div class="ui transparent input">
-                                    <input type="text" name="note{{i}}" id="note{{i}}" [(ngModel)]="obj[i].note">
+                                    <input type="text" name="note{{i}}" id="note{{i}}" [(ngModel)]="beans[i].note">
                                 </div>
                             </td>
                             <td>
-                                <button *ngIf="i>=3" class="ui right floated mini red button" style="padding: 0.5em;" type="button" (click)="removeField(i)">
+                                <button *ngIf="i>=1" class="ui right floated mini red button" style="padding: 0.5em;" type="button" (click)="removeField(i)">
                                     <i class="minus icon" style="margin-right: 0"></i>
                                 </button>
                             </td>
